5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1758_1183.log
== TEST (2019-05-28 10:32:08) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
print(n)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:32:26) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
	print(n)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:34:13) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
		i = i + 1
print(n)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:34:24) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
		i = i + 1
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:34:44) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
		i = i + 1
	print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:36:11) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
		i = i + 1
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:36:25) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
		i = i + 1
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:39:40) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
		i = i + 1
print(v[i])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:39:54) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
		i = i + 1
	print(v[i])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:40:11) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
		i = i + 1
	print(v[i])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:41:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
		i = i + 1
print(v[i])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:41:41) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
		i = i + 1
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:42:20) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
		i = i + 1
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:42:37) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
		i = i + 1
	print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:42:46) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
		i = i + 1
	print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:44:14) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
		i = i + 1
	print(size[i])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:44:30) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
		i = i + 1
	print(size(i))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:45:28) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] >= 0):
		n = n + 1 
	print(n)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:56:12) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	print(n)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:56:17) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	print(n)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:56:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	print(n)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:56:26) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	print(n)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:56:32) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	print(n)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:56:34) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	print(n)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:56:36) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	print(n)
	
-- EXECUTION TIME:
0.039021
-- ERROR:
Error response from daemon: Container 35e841eb557dd11caeba8c36bea2c873df3d0f85d985151ef00bbb5d986ad671 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:56:38) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	print(n)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:56:49) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	print(n)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:58:26) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:58:46) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:03:32) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final) - n

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vet_final(j) = vet(i)
		j = j + 1
	i = i + 1
print(vet_final)
-- ERROR:
File "XXXX", line 17
    vet_final(j) = vet(i)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:03:36) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final) - n

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vet_final(j) = vet(i)
		j = j + 1
	i = i + 1
print(vet_final)
-- ERROR:
File "XXXX", line 17
    vet_final(j) = vet(i)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:03:37) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final) - n

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vet_final(j) = vet(i)
		j = j + 1
	i = i + 1
print(vet_final)
-- ERROR:
File "XXXX", line 17
    vet_final(j) = vet(i)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:03:38) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final) - n

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vet_final(j) = vet(i)
		j = j + 1
	i = i + 1
print(vet_final)
-- ERROR:
File "XXXX", line 17
    vet_final(j) = vet(i)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:04:29) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final) - n

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vet_final(j) = vet(i)
		j = j + 1
	i = i + 1
print(vet_final)
-- ERROR:
File "XXXX", line 17
    vet_final(j) = vet(i)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:05:11) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final) - n

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vet_final(j) = vet(i)
		j = j + 1
	i = i + 1
print(vet_final)
-- ERROR:
File "XXXX", line 17
    vet_final(j) = vet(i)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:05:39) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final) - n

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vet_final[j] = vet(i)
		j = j + 1
	i = i + 1
print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:06:25) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final) - n

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vet_final[j] = vet(i)
		j = j + 1
	i = i + 1
print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:06:53) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final) - n

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vet_final[j] = vet(i)
		j = j + 1
	i = i + 1
print(vet_final[j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:07:51) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final) - size(v)

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vet_final[j] = vet(i)
		j = j + 1
	i = i + 1
print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:08:03) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final) - size(v)

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vet_final[j] = vet(i)
		j = j + 1
	i = i + 1
	print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:09:20) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final), dtype=int

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vet_final[j] = vet(i)
		j = j + 1
	i = i + 1
print(vet_final)
-- ERROR:
File "XXXX", line 11
    vet_final = zeros(tam_final), dtype=int
               ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:09:46) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

tamfinal = size(v) - n
vetfinal = zeros(tamfinal), dtype=int

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vetfinal[j] = vet(i)
		j = j + 1
	i = i + 1
print(vetfinal)
-- ERROR:
File "XXXX", line 11
    vetfinal = zeros(tamfinal), dtype=int
              ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:10:23) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	i = i + 1

tamfinal = size(v) - n
vetfinal = zeros(tamfinal), dtype=int

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vetfinal[j] = vet(i)
		j = j + 1
	i = i + 1
print(vetfinal)
-- ERROR:
File "XXXX", line 11
    vetfinal = zeros(tamfinal), dtype=int
              ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:11:39) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	i = i + 1

tamfinal = size(v) - n
vetfinal = zeros(tamfinal, dtype=int)

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vetfinal[j] = vet(i)
		j = j + 1
	i = i + 1
print(vetfinal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:12:26) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	i = i + 1

tamfinal = size(v) - n
vetfinal = zeros(tamfinal, dtype=int)

i = 0
j = 0
while(i <size(v)):
	if (v[i] >= 0):
		vetfinal[j] = vet(i)
		j = j + 1
	i = i + 1
print(vetfinal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:12:47) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	i = i + 1

tamfinal = size(v) - n
vetfinal = zeros(tamfinal, dtype=int)

i = 0
j = 0
while(i <size(v)):
	if (v[i] >= 0):
		vetfinal = vet(i)
		j = j + 1
	i = i + 1
print(vetfinal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:13:06) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	i = i + 1

tamfinal = size(v) - n
vetfinal = zeros(tamfinal, dtype=int)

i = 0
j = 0
while(i <size(v)):
	if (v[i] >= 0):
		vetfinal(j) = vet(i)
		j = j + 1
	i = i + 1
print(vetfinal)
-- ERROR:
File "XXXX", line 17
    vetfinal(j) = vet(i)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:13:17) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	i = i + 1

tamfinal = size(v) - n
vetfinal = zeros(tamfinal, dtype=int)

i = 0
j = 0
while(i <size(v)):
	if (v[i] >= 0):
		vetfinal(j) = vet(i)
		j = j + 1
	i = i + 1
print(vetfinal)
-- ERROR:
File "XXXX", line 17
    vetfinal(j) = vet(i)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:13:34) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	i = i + 1

tamfinal = size(v) - n
vetfinal = zeros(tamfinal, dtype=int)

i = 0
j = 0
while(i <size(v)):
	if (v[i] >= 0):
		vetfinal[j] = vet(i)
		j = j + 1
	i = i + 1
print(vetfinal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:14:02) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
		i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final) - n

i = 0
j = 0
while(i <size(v)):
	if (v(i)>=0):
		vet_final[j] = vet(i)
		j = j + 1
	i = i + 1
print(vet_final)
-- EXECUTION TIME:
471.753
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:38:43) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	i = i + 1

tamfinal = size(v) - n
vetfinal = zeros(tamfinal, dtype=int)

i = 0
j = 0
while(i <size(v)):
	if (v[i] >= 0):
		vetfinal[j] = vet[i]
		j = j + 1
	i = i + 1
print(vetfinal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:39:00) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	i = i + 1

tamfinal = size(v) - n
vetfinal = zeros(tamfinal, dtype=int)

i = 0
j = 0
while(i <size(v)):
	if (v[i] >= 0):
		vetfinal[j] = v[i]
		j = j + 1
	i = i + 1
print(vetfinal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:39:11) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(v)):
	if(v[i] < 0):
		n = n + 1 
	i = i + 1

tamfinal = size(v) - n
vetfinal = zeros(tamfinal, dtype=int)

i = 0
j = 0
while(i <size(v)):
	if (v[i] >= 0):
		vetfinal[j] = v[i]
		j = j + 1
	i = i + 1
print(vetfinal)
-- EXECUTION TIME:
0.355091
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
